# ChangeLog for media-video/gephex
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/gephex/Attic/ChangeLog,v 1.6 2004/06/25 00:40:33 agriffis Exp $

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> gephex-0.0.4-r1.ebuild,
  gephex-0.0.4.ebuild:
  Add inherit eutils

*gephex-0.0.4-r1 (19 Apr 2004)

*gephex-0.0.4 (14 Dec 2003)

  19 Apr 2004; Marc Hildebrand <zypher@gentoo.org>; gephex-0.0.4-r1.ebuild :
  Added disable-glx patch.

  02 Mar 2004; Marc Hildebrand <zypher@gentoo.org>; gephex-0.0.4.ebuild :
  Initial ebuild.