@@ -1,9 +1,11 @@
-MD5 b5be84b1fbc42ca05516ecb2eafe1471 gephex-0.0.4-r1.ebuild 1232
+MD5 10eabe48f8d3100f7b16b34474cc46a3 gephex-0.4.ebuild 1051
 MD5 5058c9b00a8344a3f43b2a200f7718bd gephex-0.0.4.ebuild 1159
-MD5 e532481d4989fd037e9c11fa6cab3a66 ChangeLog 588
+MD5 b5be84b1fbc42ca05516ecb2eafe1471 gephex-0.0.4-r1.ebuild 1232
+MD5 38dee1cfefa0945e34b75a961fc6e775 ChangeLog 704
 MD5 955f56e990f8c32d705708b4cc4db089 metadata.xml 251
-MD5 d0c894eccb6239538b954cb1d6680c5d files/0.0.4-makefile.in.patch 873
+MD5 0e6024af9a9dd49daca8977ba601c8f5 files/0.0.4-alsa-api-fix.patch 832
+MD5 4fe4a3b7c2fad145df1bbedc08e914db files/digest-gephex-0.4 64
 MD5 060f2d352bb4bee71e647beb2b8135a1 files/0.0.4-disable-glx.patch 159
 MD5 8ce45a490b11be332445c5166c2be858 files/digest-gephex-0.0.4 65
-MD5 0e6024af9a9dd49daca8977ba601c8f5 files/0.0.4-alsa-api-fix.patch 832
 MD5 8ce45a490b11be332445c5166c2be858 files/digest-gephex-0.0.4-r1 65
+MD5 d0c894eccb6239538b954cb1d6680c5d files/0.0.4-makefile.in.patch 873
