@@ -1,6 +1,11 @@
 # ChangeLog for media-video/gephex
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gephex/Attic/ChangeLog,v 1.6 2004/06/25 00:40:33 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/gephex/Attic/ChangeLog,v 1.7 2004/07/09 11:16:41 zypher Exp $
+
+*gephex-0.4 (06 Jun 2004)
+
+  09 Jul 2004; Marc Hildebrand <zypher@gentoo.org>; gephex-0.4.ebuild :
+  Version bump.
 
   27 Apr 2004; Aron Griffis <agriffis@gentoo.org> gephex-0.0.4-r1.ebuild,
   gephex-0.0.4.ebuild:
